[gd_scene load_steps=3 format=2]

[ext_resource path="res://Locations/GameView.gd" type="Script" id=1]
[ext_resource path="res://Locations/buyDrugs.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Game Main"

[node name="LocationList" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 387.0
margin_top = 4.0
margin_right = 662.0
margin_bottom = 229.0

[node name="Buy" type="Panel" parent="."]
modulate = Color( 1, 0.945098, 0.909804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridDrugsToBy" type="GridContainer" parent="Buy"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 498.0
margin_top = 263.0
margin_right = -45.0
margin_bottom = -54.0
columns = 3

[node name="Control" parent="Buy/GridDrugsToBy" instance=ExtResource( 2 )]

[node name="Close" type="Button" parent="Buy"]
margin_left = 620.0
margin_top = 231.0
margin_right = 667.0
margin_bottom = 251.0
text = "Close"

[connection signal="pressed" from="Buy/Close" to="." method="_on_Close_pressed"]
